--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-spring/parallax": "^9.7.4",
     "@types/styled-components": "^5.1.34",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-parallax": "^3.5.1",
     "react-scroll-parallax": "^3.4.5",
